# bread-modular

./: .gitignore  .gitmodules  README.md
modules/16bit/: 16bit.kicad_pcb  16bit.kicad_pro  16bit.kicad_sch  CHANGELOG
modules/16bit+/: 16bit+.kicad_pcb  16bit+.kicad_pro  16bit+.kicad_sch  CHANGELOG
modules/16bit+/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
modules/16bit/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
modules/32bit/: 32bit.kicad_pcb  32bit.kicad_pro  32bit.kicad_sch  CHANGELOG
modules/32bit/code/32bit/main/: CMakeLists.txt  main.c
modules/32bit/code/32bit/main/include/: bm_app.h  bm_audio.h  bm_button.h  bm_cv.h  bm_es8388.h  bm_led.h  bm_midi.h  bm_usb_serial.h
modules/32bit/code/32bit/main/include/apps/: bm_app_fxrack.h  bm_app_pipe.h  bm_app_reverb.h
modules/32bit/code/32bit/main/include/audio/: bm_all_pass_filter.h  bm_classic_reverb.h  bm_comb_filter.h
modules/32bit/code/32bit/main/include/lib/: bm_buffer.h  bm_param.h  bm_save.h  bm_utils.h
modules/32bit/code/32bit/main/src/: bm_audio.c  bm_button.c  bm_cv.c  bm_es8388.c  bm_led.c  bm_midi.c  bm_usb_serial.c
modules/32bit/code/32bit/main/src/apps/: bm_app_fxrack.c  bm_app_pipe.c  bm_app_reverb.c
modules/32bit/code/32bit/main/src/audio/: bm_all_pass_filter.c  bm_classic_reverb.c  bm_comb_filter.c
modules/32bit/code/32bit/main/src/lib/: bm_buffer.c  bm_param.c  bm_save.c  bm_utils.c
modules/32bit/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
modules/4mix/: 4mix.kicad_pcb  4mix.kicad_pro  4mix.kicad_sch  4mix.wbk  CHANGELOG  channel.kicad_sch  channel_1.kicad_sch  channel_2.kicad_sch  channel_3.kicad_sch  channel_4.kicad_sch  kk.kicad_sch  overdrive.kicad_sch  sends.kicad_sch
modules/4mix/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
modules/8bit/: 8bit.kicad_pcb  8bit.kicad_pro  8bit.kicad_sch  CHANGELOG
modules/8bit/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
modules/base/: CHANGELOG  base.kicad_pcb  base.kicad_pro  base.kicad_sch  base.wbk
modules/base/production/: bom.csv  (+3 more)
modules/cv_math/: cv_math.kicad_pro
modules/drive/: CHANGELOG  drive.kicad_pcb
modules/env/: CHANGELOG  env.kicad_pcb  env.kicad_pro  env.kicad_sch
modules/gate/: gate.kicad_pcb  gate.kicad_pro  gate.kicad_sch
modules/head_out/: CHANGELOG  head_out.kicad_pcb  head_out.kicad_pro  head_out.kicad_sch  head_out.wbk
modules/hihat/: CHANGELOG  hihat.kicad_pcb  hihat.kicad_pro  hihat.kicad_sch
modules/imix/: CHANGELOG  imix.kicad_pcb  imix.kicad_pro  imix.kicad_sch
modules/jacks/: jacks.kicad_pcb  jacks.kicad_pro  jacks.kicad_sch
modules/jvca/: jvca.kicad_pro
modules/kick/: kick.kicad_pro
modules/line_in/: CHANGELOG  line_in.kicad_pcb  line_in.kicad_pro
modules/line_out/: CHANGELOG  line_out.kicad_pcb  line_out.kicad_pro  line_out.kicad_sch  line_out.wbk
modules/low/: CHANGELOG  low.kicad_pcb  low.kicad_pro  low.kicad_sch  low.wbk
modules/mcc/: CHANGELOG  mcc.kicad_pcb  mcc.kicad_pro  mcc.kicad_sch
modules/mco/: CHANGELOG  mco.kicad_pcb  mco.kicad_pro  mco.kicad_sch
modules/midi/: CHANGELOG  gate_out.kicad_sch  midi.kicad_pcb  midi.kicad_pro  midi.kicad_sch
modules/noise/: CHANGELOG  noise.kicad_pcb  noise.kicad_pro  noise.kicad_sch
modules/pots/: pots.kicad_pcb  pots.kicad_pro  pots.kicad_sch
modules/svf/: CHANGELOG  svf.kicad_pcb  svf.kicad_pro
modules/v2ca/: CHANGELOG  v2ca.kicad_pcb  v2ca.kicad_pro
modules/wave/: CHANGELOG  wave.kicad_pcb  wave.kicad_pro
opt/: BreadModular_Symbols.kicad_sym
opt/BreadModular_MISC.pretty/: K2-1808SN-A4SW-01.kicad_mod  SOIC-8 2.54.kicad_mod  SOIC-8 Generic.kicad_mod
opt/UDPIProgrammer/: CHANGELOG  UDPIProgrammer.kicad_pcb  UDPIProgrammer.kicad_pro  UDPIProgrammer.kicad_sch
opt/UPDIProgrammer/: CHANGELOG  UDPIProgrammer.kicad_pcb  UDPIProgrammer.kicad_sch  UPDIProgrammer.kicad_pcb  UPDIProgrammer.kicad_pro  UPDIProgrammer.kicad_sch
(+374 files in other folders)
