idf_component_register(
    SRCS
        "main.c"
        "src/bm_led.c"
        "src/bm_button.c"
        "src/bm_cv.c"
        "src/bm_es8388.c"
        "src/bm_audio.c"
        "src/bm_midi.c"
        "src/lib/bm_buffer.c"
        "src/lib/bm_utils.c"
        "src/lib/bm_save.c"
        "src/lib/bm_param.c"
        "src/audio/bm_comb_filter.c"
        "src/audio/bm_all_pass_filter.c"
        "src/audio/bm_classic_reverb.c"
        "src/apps/bm_app_fxrack.c"
        "src/apps/bm_app_reverb.c"
    PRIV_REQUIRES
        spi_flash
    REQUIRES
        driver
        esp_adc
        esp_timer
        nvs_flash
    INCLUDE_DIRS
        ""
        "include"
)
